[gd_scene load_steps=5 format=2]

[ext_resource path="res://Scripts/Menus/Waiting_Screen.gd" type="Script" id=1]
[ext_resource path="res://Scenes/Menus/Group/Top.tscn" type="PackedScene" id=2]
[ext_resource path="res://Scripts/Buttons/Quit_Button.gd" type="Script" id=3]
[ext_resource path="res://Scripts/Buttons/IP_Button.gd" type="Script" id=4]

[node name="Waiting_Screen" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="All" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 15.0
margin_top = 15.0
margin_right = -15.0
margin_bottom = -15.0

[node name="Top" parent="All" instance=ExtResource( 2 )]
margin_right = 1250.0
margin_bottom = 169.0

[node name="Label" type="Label" parent="All"]
margin_top = 250.0
margin_right = 1250.0
margin_bottom = 264.0
size_flags_horizontal = 3
size_flags_vertical = 6
text = "En attente d'un joueur..."
align = 1
valign = 1

[node name="Buttons" type="HBoxContainer" parent="All"]
margin_top = 346.0
margin_right = 1250.0
margin_bottom = 515.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Quit_Button" type="Button" parent="All/Buttons"]
margin_left = 282.0
margin_top = 74.0
margin_right = 340.0
margin_bottom = 94.0
size_flags_horizontal = 6
size_flags_vertical = 6
text = "Quitter"
script = ExtResource( 3 )

[node name="IP_Buttons" type="HBoxContainer" parent="All/Buttons"]
margin_left = 627.0
margin_right = 1250.0
margin_bottom = 169.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 30
alignment = 1
script = ExtResource( 4 )

[node name="IP_Button" type="Button" parent="All/Buttons/IP_Buttons"]
margin_left = 162.0
margin_top = 74.0
margin_right = 327.0
margin_bottom = 94.0
size_flags_horizontal = 4
size_flags_vertical = 6
text = "Afficher mon adresse IP"

[node name="HTTPRequest" type="HTTPRequest" parent="All/Buttons/IP_Buttons"]

[node name="Button" type="Button" parent="All/Buttons/IP_Buttons"]
margin_left = 357.0
margin_top = 74.0
margin_right = 460.0
margin_bottom = 94.0
size_flags_horizontal = 4
size_flags_vertical = 6
text = "Copier mon IP"

[node name="Instructions" type="Label" parent="All"]
margin_top = 519.0
margin_right = 1250.0
margin_bottom = 690.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Pour jouer contre quelqu'un, il doit cliquer sur le bouton \"Rejoindre une partie\" du lobby, puis rentrer ton adresse IP dans le champ dédié. 
Tu peux afficher ton IP en cliquant sur le bouton \"Afficher mon IP\", j'espère que t'avais compris."
align = 1
valign = 1
[connection signal="pressed" from="All/Buttons/Quit_Button" to="All/Buttons/Quit_Button" method="_on_Quit_Button_pressed"]
[connection signal="pressed" from="All/Buttons/IP_Buttons/IP_Button" to="All/Buttons/IP_Buttons" method="_on_IP_Button_pressed"]
[connection signal="request_completed" from="All/Buttons/IP_Buttons/HTTPRequest" to="All/Buttons/IP_Buttons" method="_on_HTTPRequest_request_completed"]
[connection signal="pressed" from="All/Buttons/IP_Buttons/Button" to="All/Buttons/IP_Buttons" method="_on_Button_pressed"]
